warp/backup/pxcentral-ingress-wsgi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress-central
  namespace: central 
spec:
  ingressClassName: nginx
  rules:
  - host: pxcentral.3.65.162.30.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: px-central-ui
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress-backup
  namespace: central
spec:
  ingressClassName: nginx
  rules:
  - host: pxbackup.3.65.162.30.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: px-backup-ui
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress-keycloack
  namespace: central
spec:
  ingressClassName: nginx
  rules:
  - host: keycloack.3.65.162.30.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pxcentral-keycloak-http
            port:
              number: 80
